--- a/app/src/main/res/layout/activity_main_m1.xml
+++ b/app/src/main/res/layout/activity_main_m1.xml
@@ -37,7 +37,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="16dp"
+            android:layout_margin="10dp"
             android:background="@drawable/shape2"
             android:orientation="vertical"
             android:padding="10dp">
@@ -54,54 +54,64 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:text="@string/question_E1"
+                android:text="@string/question_M1"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
-            <RadioGroup
-                android:id="@+id/question_E1"
+            <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/select_all_checkboxes"
+                android:textAllCaps="false"
+                android:textSize="16sp" />
 
-                <RadioButton
-                    android:id="@+id/qE1_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
-                    android:text="@string/jack"
-                    android:textSize="16sp" />
+            <CheckBox
+                android:id="@+id/qM1_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:paddingLeft="24dp"
+                android:text="@string/bengal"
+                android:textSize="16sp" />
 
-                <RadioButton
-                    android:id="@+id/qE1_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
-                    android:text="@string/tom"
-                    android:textSize="16sp" />
+            <CheckBox
+                android:id="@+id/qM1_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:paddingLeft="24dp"
+                android:text="@string/ragdoll"
+                android:textSize="16sp" />
 
-                <RadioButton
-                    android:id="@+id/qE1_3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
-                    android:text="@string/dave"
-                    android:textSize="16sp" />
+            <CheckBox
+                android:id="@+id/qM1_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:paddingLeft="24dp"
+                android:text="@string/chinese_longhair"
+                android:textSize="16sp" />
 
-                <RadioButton
-                    android:id="@+id/qE1_4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
-                    android:text="@string/prince"
-                    android:textSize="16sp" />
-            </RadioGroup>
+            <CheckBox
+                android:id="@+id/qM1_4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:paddingLeft="24dp"
+                android:text="@string/russian_blue"
+                android:textSize="16sp" />
+
+            <CheckBox
+                android:id="@+id/qM1_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:paddingLeft="24dp"
+                android:text="@string/danish_white"
+                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -126,25 +136,34 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:text="@string/question_E2"
+                android:text="@string/question_M2"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
-            <EditText
-                android:id="@+id/question_E2"
+            <RadioGroup
+                android:id="@+id/question_M2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:background="#f7eff4"
-                android:hint="0"
-                android:inputType="number"
-                android:maxLength="2"
-                android:padding="10dp" />
+                android:layout_height="wrap_content">
 
+                <RadioButton
+                    android:id="@+id/qM2_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:paddingLeft="24dp"
+                    android:text="@string/a_true"
+                    android:textSize="16sp" />
 
+                <RadioButton
+                    android:id="@+id/qM2_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:paddingLeft="24dp"
+                    android:text="@string/a_false"
+                    android:textSize="16sp" />
+            </RadioGroup>
         </LinearLayout>
 
         <LinearLayout
@@ -169,125 +188,53 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:text="@string/question_E3"
+                android:text="@string/question_M3"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
             <RadioGroup
-                android:id="@+id/question_E3"
+                android:id="@+id/question_M3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <RadioButton
-                    android:id="@+id/qE3_1"
+                    android:id="@+id/qM3_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:paddingLeft="24dp"
-                    android:text="@string/herbivore"
+                    android:text="@string/duchess"
                     android:textSize="16sp" />
 
                 <RadioButton
-                    android:id="@+id/qE3_2"
+                    android:id="@+id/qM3_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:paddingLeft="24dp"
-                    android:text="@string/omnivore"
+                    android:text="@string/queen"
                     android:textSize="16sp" />
 
                 <RadioButton
-                    android:id="@+id/qE3_3"
+                    android:id="@+id/qM3_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:paddingLeft="24dp"
-                    android:text="@string/carnivore"
+                    android:text="@string/princess"
                     android:textSize="16sp" />
 
-
+                <RadioButton
+                    android:id="@+id/qM3_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:paddingLeft="24dp"
+                    android:text="@string/empress"
+                    android:textSize="16sp" />
             </RadioGroup>
-
         </LinearLayout>
-
-        <!--
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/shape2"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginTop="8dp"
-                        android:text="Question 4."
-                        android:textAllCaps="true"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:textColor="@color/black"
-                        android:text="Which of these are types of cat?"
-                        android:textAllCaps="false"
-                        android:textSize="16sp" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:text="(You must select all correct answers to win the point.)"
-                        android:textAllCaps="false"
-                        android:textSize="16sp" />
-                    <CheckBox
-                        android:id="@+id/qE4_1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="16dp"
-                        android:paddingLeft="24dp"
-                        android:text="Bengal"
-                        android:textSize="16sp" />
-
-                    <CheckBox
-                        android:id="@+id/qE4_5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="16dp"
-                        android:paddingLeft="24dp"
-                        android:text="Hungarian Longhair"
-                        android:textSize="16sp" />
-                    <CheckBox
-                        android:id="@+id/qE4_3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="16dp"
-                        android:paddingLeft="24dp"
-                        android:text="Ragdoll"
-                        android:textSize="16sp" />
-
-                    <CheckBox
-                        android:id="@+id/qE4_4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="16dp"
-                        android:paddingLeft="24dp"
-                        android:text="Russian Blue"
-                        android:textSize="16sp" />
-                    <CheckBox
-                        android:id="@+id/qE4_4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="16dp"
-                        android:paddingLeft="24dp"
-                        android:text="Danish Littlespot"
-                        android:textSize="16sp" />
-                </LinearLayout>
-                -->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -309,8 +256,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:text="@string/question_E4"
+                android:text="@string/question_M4"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
@@ -319,54 +267,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="@string/select_all_checkboxes"
+                android:text="@string/type_answer"
                 android:textAllCaps="false"
                 android:textSize="16sp" />
 
-            <CheckBox
-                android:id="@+id/qE4_1"
+            <EditText
+                android:id="@+id/question_M4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:paddingLeft="24dp"
-                android:text="@string/smell"
-                android:textSize="16sp" />
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:background="#f7eff4"
+                android:hint="@string/yes_no"
+                android:inputType="text"
+                android:maxLength="6"
+                android:padding="10dp" />
 
-            <CheckBox
-                android:id="@+id/qE4_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:paddingLeft="24dp"
-                android:text="@string/sight_in_low_light"
-                android:textSize="16sp" />
 
-            <CheckBox
-                android:id="@+id/qE4_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:paddingLeft="24dp"
-                android:text="@string/touch"
-                android:textSize="16sp" />
-
-            <CheckBox
-                android:id="@+id/qE4_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:paddingLeft="24dp"
-                android:text="@string/hearing"
-                android:textSize="16sp" />
-
-            <CheckBox
-                android:id="@+id/qE4_5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:paddingLeft="24dp"
-                android:text="@string/taste_for_sweet_foods"
-                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -391,34 +309,46 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:text="@string/question_E5"
+                android:text="@string/question_M5"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
             <RadioGroup
-                android:id="@+id/question_E5"
+                android:id="@+id/question_M5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <RadioButton
-                    android:id="@+id/qE5_1"
+                    android:id="@+id/qM5_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:paddingLeft="24dp"
-                    android:text="@string/a_true"
+                    android:text="@string/_30"
                     android:textSize="16sp" />
 
                 <RadioButton
-                    android:id="@+id/qE5_2"
+                    android:id="@+id/qM5_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:paddingLeft="24dp"
-                    android:text="@string/a_false"
+                    android:text="@string/_50"
                     android:textSize="16sp" />
+
+                <RadioButton
+                    android:id="@+id/qM5_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:paddingLeft="24dp"
+                    android:text="@string/_70"
+                    android:textSize="16sp" />
+
+
             </RadioGroup>
+
         </LinearLayout>
 
         <LinearLayout
@@ -441,14 +371,14 @@
                 android:textSize="16sp" />
 
             <Button
-                android:id="@+id/submitE_A"
+                android:id="@+id/submit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="36dp"
                 android:layout_marginRight="16dp"
                 android:layout_weight="1"
                 android:background="@drawable/next_button_green"
-                android:onClick="submitE_A"
+                android:onClick="submit"
                 android:text="@string/next_button"
                 android:textSize="16sp" />
         </LinearLayout>
