--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -26,7 +26,7 @@
             android:fontFamily="@font/catfont"
             android:gravity="center_horizontal"
             android:paddingBottom="10dp"
-            android:text="@string/quiz_name"
+            android:text="@string/app_name"
             android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="56sp" />
