--- a/app/src/main/res/layout/activity_main_h2.xml
+++ b/app/src/main/res/layout/activity_main_h2.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context="com.example.android.catquiz.MainActivityE2">
+    tools:context="com.example.android.catquiz.MainActivityH2">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
 
 
         <ImageView
-            android:id="@+id/banner_E1"
+            android:id="@+id/banner_H1"
             android:layout_width="wrap_content"
             android:layout_height="124dp"
             android:scaleType="centerCrop"
@@ -56,50 +56,50 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:text="@string/question_E1"
+                android:text="Are tortoiseshell cats usually male or female?"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
             <RadioGroup
-                android:id="@+id/question_E1"
+                android:id="@+id/question_M6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <RadioButton
-                    android:id="@+id/qE1_1"
+                    android:id="@+id/qM6_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:paddingLeft="24dp"
-                    android:text="@string/jack"
+                    android:text="Almost always male"
                     android:textSize="16sp" />
 
                 <RadioButton
-                    android:id="@+id/qE1_2"
+                    android:id="@+id/qM6_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:paddingLeft="24dp"
-                    android:text="@string/tom"
+                    android:text="Almost always female"
                     android:textSize="16sp" />
 
                 <RadioButton
-                    android:id="@+id/qE1_3"
+                    android:id="@+id/qM6_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:paddingLeft="24dp"
-                    android:text="@string/dave"
+                    android:text="Slightly higher chance of being male"
                     android:textSize="16sp" />
 
                 <RadioButton
-                    android:id="@+id/qE1_4"
+                    android:id="@+id/qM6_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:paddingLeft="24dp"
-                    android:text="@string/prince"
+                    android:text="Equal chance of being male or female"
                     android:textSize="16sp" />
             </RadioGroup>
         </LinearLayout>
@@ -126,13 +126,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:text="@string/question_E2"
+                android:text="@string/question_H7"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
             <EditText
-                android:id="@+id/question_E2"
+                android:id="@+id/question_H7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -169,43 +169,51 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:text="@string/question_E3"
+                android:text="@string/question_M8"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
             <RadioGroup
-                android:id="@+id/question_E3"
+                android:id="@+id/question_M8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <RadioButton
-                    android:id="@+id/qE3_1"
+                    android:id="@+id/qM8_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:paddingLeft="24dp"
-                    android:text="@string/herbivore"
+                    android:text="@string/ans8_1"
                     android:textSize="16sp" />
 
                 <RadioButton
-                    android:id="@+id/qE3_2"
+                    android:id="@+id/qM8_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:paddingLeft="24dp"
-                    android:text="@string/omnivore"
+                    android:text="@string/ans8_2"
                     android:textSize="16sp" />
 
                 <RadioButton
-                    android:id="@+id/qE3_3"
+                    android:id="@+id/qM8_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:paddingLeft="24dp"
-                    android:text="@string/carnivore"
+                    android:text="@string/ans8_3"
                     android:textSize="16sp" />
 
+                <RadioButton
+                    android:id="@+id/qM8_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:paddingLeft="24dp"
+                    android:text="@string/ans8_4"
+                    android:textSize="16sp" />
 
             </RadioGroup>
 
@@ -233,7 +241,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@string/question_E4"
+                android:text="@string/question_M9"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
@@ -247,48 +255,48 @@
                 android:textSize="16sp" />
 
             <CheckBox
-                android:id="@+id/qE4_1"
+                android:id="@+id/qM9_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:paddingLeft="24dp"
-                android:text="@string/smell"
+                android:text="@string/chocolate"
                 android:textSize="16sp" />
 
             <CheckBox
-                android:id="@+id/qE4_2"
+                android:id="@+id/qM9_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:paddingLeft="24dp"
-                android:text="@string/sight_in_low_light"
+                android:text="@string/garlic"
                 android:textSize="16sp" />
 
             <CheckBox
-                android:id="@+id/qE4_3"
+                android:id="@+id/qM9_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:paddingLeft="24dp"
-                android:text="@string/touch"
+                android:text="@string/roses"
                 android:textSize="16sp" />
 
             <CheckBox
-                android:id="@+id/qE4_4"
+                android:id="@+id/qM9_4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:paddingLeft="24dp"
-                android:text="@string/hearing"
+                android:text="@string/lilies"
                 android:textSize="16sp" />
 
             <CheckBox
-                android:id="@+id/qE4_5"
+                android:id="@+id/qM9_5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:paddingLeft="24dp"
-                android:text="@string/taste_for_sweet_foods"
+                android:text="@string/banana"
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -314,18 +322,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:text="@string/question_E5"
+                android:text="@string/question_M10"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
             <RadioGroup
-                android:id="@+id/question_E5"
+                android:id="@+id/question_M10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <RadioButton
-                    android:id="@+id/qE5_1"
+                    android:id="@+id/qM10_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
@@ -334,7 +342,7 @@
                     android:textSize="16sp" />
 
                 <RadioButton
-                    android:id="@+id/qE5_2"
+                    android:id="@+id/qM10_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
@@ -364,14 +372,14 @@
                 android:textSize="16sp" />
 
             <Button
-                android:id="@+id/submitE_A"
+                android:id="@+id/submit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="36dp"
                 android:layout_marginRight="16dp"
                 android:layout_weight="1"
                 android:background="@drawable/next_button_blue"
-                android:onClick="submitE_A"
+                android:onClick="submit"
                 android:text="@string/next_button"
                 android:textSize="16sp" />
         </LinearLayout>
