--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -87,7 +87,7 @@
                 android:textSize="@dimen/text_M" />
 
             <RadioGroup
-                android:id="@+id/difficulty"
+                android:id="@+id/setDifficulty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
