--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -57,7 +57,7 @@
 
 
             <EditText
-                android:id="@+id/name"
+                android:id="@+id/et_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/name"
@@ -87,12 +87,12 @@
                 android:textSize="@dimen/text_M" />
 
             <RadioGroup
-                android:id="@+id/setDifficulty"
+                android:id="@+id/rg_set_difficulty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <RadioButton
-                    android:id="@+id/easy"
+                    android:id="@+id/rb_easy"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_M"
@@ -101,7 +101,7 @@
                     android:textSize="@dimen/text_M" />
 
                 <RadioButton
-                    android:id="@+id/medium"
+                    android:id="@+id/rb_medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_M"
@@ -110,7 +110,7 @@
                     android:textSize="@dimen/text_M" />
 
                 <RadioButton
-                    android:id="@+id/hard"
+                    android:id="@+id/rb_hard"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_M"
@@ -149,7 +149,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/subbutton"
+                    android:id="@+id/btn_subtract_questions"
                     android:layout_width="@dimen/add_button_M"
                     android:layout_height="@dimen/add_button_M"
                     android:background="@drawable/next_button_blue"
@@ -158,7 +158,7 @@
                     android:textSize="@dimen/text_L" />
 
                 <TextView
-                    android:id="@+id/quantity_text_view"
+                    android:id="@+id/tv_questions_quantity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/margin_L"
@@ -168,7 +168,7 @@
                     android:textSize="@dimen/text_M" />
 
                 <Button
-                    android:id="@+id/addbutton"
+                    android:id="@+id/btn_add_questions"
                     android:layout_width="@dimen/add_button_M"
                     android:layout_height="@dimen/add_button_M"
                     android:background="@drawable/next_button_blue"
@@ -182,7 +182,7 @@
 
 
         <Button
-            android:id="@+id/start"
+            android:id="@+id/btn_start"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
